--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAFokBr7ZV5bkKbVSPzGUVmH7uLxUFdvQ8&libraries=places"></script>
     <meta charset="utf-8" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta
